--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.8.4",
     "framer-motion": "^12.9.2",
     "googleapis": "^148.0.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "openai": "^4.95.1",
     "rc-progress": "^4.0.0",
