--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "@uiw/react-md-editor": "^4.0.7",
     "apexcharts": "^4.7.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.9.2",
