--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-bold": "^2.11.7",
     "@tiptap/extension-bullet-list": "^2.11.7",
