--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-apexcharts": "^1.7.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
